--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "core-js": "^3.8.3",
     "firebase": "^10.5.0",
     "vue": "^3.2.13",
+    "vue-flutterwave": "^1.0.0",
+    "vue-paystack": "^2.0.4",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0"
   },
